--- a/.github/workflows/sanity-build.yaml
+++ b/.github/workflows/sanity-build.yaml
@@ -4,56 +4,66 @@ on: [pull_request]
 
 jobs:
   frontend-sanity-build:
+    name: Frontend Sanity Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '18'
           cache: 'npm'
           cache-dependency-path: 'frontend/package-lock.json'
       - name: Install frontend dependencies
+        shell: bash
         run: |
           cd frontend
           npm ci
       - name: Lint frontend
+        shell: bash  
         run: |
           cd frontend
           npm run lint
       - name: Test frontend
+        shell: bash
         run: |
           cd frontend
           npm test
       - name: Build frontend
+        shell: bash
         run: |
           cd frontend
           npm run build
   server-sanity-build:
+    name: Server Sanity Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '18'
           cache: 'npm'
           cache-dependency-path: 'server/package-lock.json'
       - name: Install server dependencies
+        shell: bash
         run: |
           cd server
           npm ci
       - name: Lint server
+        shell: bash
         run: |
           cd server
           npm run lint
       - name: Test server
+        shell: bash
         run: |
           cd server
           npm test
       - name: Build server
+        shell: bash
         run: |
           cd server
           npm run build
