--- a/.github/workflows/sanity-build.yaml
+++ b/.github/workflows/sanity-build.yaml
@@ -3,8 +3,12 @@ name: Sanity Build
 on: [pull_request]
 
 jobs:
-  frontend-sanity-build:
-    name: Frontend Sanity Build
+  sanity-build:
+    strategy:
+      fail-fast: false
+      matrix:
+        apps: [frontend, server]
+    name: ${{ matrix.apps }} Sanity Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -14,56 +18,24 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: 'frontend/package-lock.json'
-      - name: Install frontend dependencies
+          cache-dependency-path: '${{ matrix.apps }}/package-lock.json'
+      - name: Install ${{ matrix.apps }} dependencies
         shell: bash
         run: |
-          cd frontend
+          cd ${{ matrix.apps }}
           npm ci
-      - name: Lint frontend
-        shell: bash  
+      - name: Lint ${{ matrix.apps }}
+        shell: bash
         run: |
-          cd frontend
+          cd ${{ matrix.apps }}
           npm run lint
-      - name: Test frontend
+      - name: Test ${{ matrix.apps }}
         shell: bash
         run: |
-          cd frontend
+          cd ${{ matrix.apps }}
           npm test
-      - name: Build frontend
+      - name: Build ${{ matrix.apps }}
         shell: bash
         run: |
-          cd frontend
-          npm run build
-  server-sanity-build:
-    name: Server Sanity Build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: 'server/package-lock.json'
-      - name: Install server dependencies
-        shell: bash
-        run: |
-          cd server
-          npm ci
-      - name: Lint server
-        shell: bash
-        run: |
-          cd server
-          npm run lint
-      - name: Test server
-        shell: bash
-        run: |
-          cd server
-          npm test
-      - name: Build server
-        shell: bash
-        run: |
-          cd server
+          cd ${{ matrix.apps }}
           npm run build
