--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,72 +1,76 @@
 {
-  "name": "kabal",
-  "version": "0.0.1",
-  "description": "Kabal - Klage- og ankebehandling",
-  "scripts": {
-    "build:js": "webpack --mode production",
-    "build:static": "copyfiles -f ./public/index.html dist && copyfiles -u 1 ./assets/* dist/assets",
-    "build": "npm run build:js && npm run build:static",
-    "start": "webpack serve --mode development",
-    "local": "npm start",
-    "test": "jest",
-    "testcov": "jest --coverage --no-cache",
-    "lint": "eslint src --color",
-    "lint-fix": "eslint src --color --fix"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "@types/jest": "^29.5.1",
-    "@types/react": "^18.2.4",
-    "@types/react-dom": "^18.2.3",
-    "@types/react-redux": "^7.1.25",
-    "@types/styled-components": "^5.1.26",
-    "@types/webpack-env": "^1.18.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "copyfiles": "^2.4.1",
-    "css-loader": "^6.7.3",
-    "eslint": "^8.39.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "fork-ts-checker-webpack-plugin": "^8.0.0",
-    "jest": "^29.5.0",
-    "prettier": "^2.8.8",
-    "style-loader": "^3.3.2",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.2",
-    "typescript": "^5.0.4",
-    "webpack": "^5.82.0",
-    "webpack-cli": "^5.0.2",
-    "webpack-dev-server": "^4.13.3"
-  },
-  "dependencies": {
-    "@navikt/aksel-icons": "^2.9.6",
-    "@navikt/ds-css": "^2.9.6",
-    "@navikt/ds-css-internal": "^2.9.6",
-    "@navikt/ds-react": "^2.9.6",
-    "@navikt/ds-react-internal": "^2.9.6",
-    "@navikt/fnrvalidator": "^1.3.0",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@styled-icons/fluentui-system-regular": "^10.47.0",
-    "@types/uuid": "^9.0.1",
-    "classnames": "^2.3.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router": "^6.11.1",
-    "react-router-dom": "^6.11.1",
-    "redux": "^4.2.1",
-    "slate": "^0.94.0",
-    "slate-history": "^0.93.0",
-    "slate-react": "^0.94.0",
-    "styled-components": "^5.3.10",
-    "uuid": "^9.0.0"
-  }
+    "name": "kabal",
+    "version": "0.0.1",
+    "description": "Kabal - Klage- og ankebehandling",
+    "scripts": {
+        "build:js": "webpack --mode production",
+        "build:static": "copyfiles -f ./public/index.html dist && copyfiles -u 1 ./assets/* dist/assets",
+        "build": "npm run build:js && npm run build:static",
+        "start": "webpack serve --mode development",
+        "local": "npm start",
+        "test": "jest",
+        "testcov": "jest --coverage --no-cache",
+        "lint": "eslint src --color",
+        "lint-fix": "eslint src --color --fix"
+    },
+    "license": "MIT",
+    "devDependencies": {
+        "@types/jest": "^29.5.1",
+        "@types/react": "^18.2.4",
+        "@types/react-dom": "^18.2.3",
+        "@types/react-redux": "^7.1.25",
+        "@types/styled-components": "^5.1.26",
+        "@types/webpack-env": "^1.18.0",
+        "@typescript-eslint/eslint-plugin": "^5.59.2",
+        "@typescript-eslint/parser": "^5.59.2",
+        "copyfiles": "^2.4.1",
+        "css-loader": "^6.7.3",
+        "eslint": "^8.39.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-import-resolver-typescript": "^3.5.5",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-jest": "^27.2.1",
+        "eslint-plugin-jsx-a11y": "^6.7.1",
+        "eslint-plugin-prefer-arrow": "^1.2.3",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.32.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "fork-ts-checker-webpack-plugin": "^8.0.0",
+        "jest": "^29.5.0",
+        "prettier": "^2.8.8",
+        "style-loader": "^3.3.2",
+        "ts-jest": "^29.1.0",
+        "ts-loader": "^9.4.2",
+        "typescript": "^5.0.4",
+        "webpack": "^5.82.0",
+        "webpack-cli": "^5.0.2",
+        "webpack-dev-server": "^4.13.3"
+    },
+    "dependencies": {
+        "@navikt/aksel-icons": "^2.9.6",
+        "@navikt/ds-css": "^2.9.6",
+        "@navikt/ds-css-internal": "^2.9.6",
+        "@navikt/ds-react": "^2.9.6",
+        "@navikt/ds-react-internal": "^2.9.6",
+        "@navikt/fnrvalidator": "^1.3.0",
+        "@reduxjs/toolkit": "^1.9.5",
+        "@styled-icons/fluentui-system-regular": "^10.47.0",
+        "@types/uuid": "^9.0.1",
+        "@udecode/plate": "^21.1.2",
+        "@udecode/plate-basic-elements": "^21.0.0",
+        "@udecode/plate-core": "^21.0.0",
+        "classnames": "^2.3.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-redux": "^8.0.5",
+        "react-router": "^6.11.1",
+        "react-router-dom": "^6.11.1",
+        "redux": "^4.2.1",
+        "slate": "^0.94.0",
+        "slate-history": "^0.93.0",
+        "slate-hyperscript": "^0.77.0",
+        "slate-react": "^0.94.0",
+        "styled-components": "^5.3.10",
+        "uuid": "^9.0.0"
+    }
 }
