Fix orgnr validation

--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -133,7 +133,8 @@
           "./src"
         ],
         "ignoreExports": [
-          "./src/index.tsx"
+          "./src/index.tsx",
+          "./src/**/*.test.ts"
         ]
       }
     ],
