--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,16 +16,16 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.5.2",
-    "@types/react": "^18.2.7",
-    "@types/react-dom": "^18.2.4",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
     "@types/react-redux": "^7.1.25",
     "@types/styled-components": "^5.1.26",
     "@types/webpack-env": "^1.18.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
     "copyfiles": "^2.4.1",
     "css-loader": "^6.8.1",
-    "eslint": "^8.41.0",
+    "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
@@ -41,31 +41,29 @@
     "style-loader": "^3.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
-    "typescript": "^5.0.4",
-    "webpack": "^5.85.0",
-    "webpack-cli": "^5.1.1",
-    "webpack-dev-server": "^4.15.0"
+    "typescript": "^5.1.3",
+    "webpack": "^5.86.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "@navikt/aksel-icons": "^3.4.2",
-    "@navikt/ds-css": "^3.4.2",
-    "@navikt/ds-css-internal": "^3.4.2",
-    "@navikt/ds-react": "^3.4.2",
-    "@navikt/ds-react-internal": "^3.4.2",
+    "@navikt/aksel-icons": "^4.1.3",
+    "@navikt/ds-css": "^4.1.3",
+    "@navikt/ds-react": "^4.1.3",
     "@navikt/fnrvalidator": "^1.3.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@styled-icons/fluentui-system-regular": "^10.47.0",
-    "@types/uuid": "^9.0.1",
+    "@types/uuid": "^9.0.2",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.7",
-    "react-router": "^6.11.2",
-    "react-router-dom": "^6.11.2",
+    "react-redux": "^8.1.0",
+    "react-router": "6.11.2",
+    "react-router-dom": "6.11.2",
     "redux": "^4.2.1",
     "slate": "^0.94.1",
     "slate-history": "^0.93.0",
-    "slate-react": "^0.94.2",
+    "slate-react": "^0.96.0",
     "styled-components": "^5.3.11",
     "uuid": "^9.0.0"
   }
