--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
   "type": "module",
   "scripts": {
     "start": "node -r dotenv-flow/config --es-module-specifier-resolution=node dist/server.js",
-    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
+    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json && cp -r src/templates dist/templates",
     "test": "jest",
     "lint": "eslint src --color",
     "lint-fix": "eslint src --color --fix"
@@ -21,27 +21,27 @@
     "express": "^4.18.2",
     "express-prom-bundle": "^6.6.0",
     "http-proxy-middleware": "^2.0.6",
-    "jose": "^4.13.1",
+    "jose": "^4.14.4",
     "node-fetch": "^3.3.1",
-    "openid-client": "^5.4.0",
+    "openid-client": "^5.4.3",
     "prom-client": "^14.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.0",
+    "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
-    "eslint": "^8.36.0",
+    "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jest": "^27.2.2",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.5.0",
+    "jest": "^29.6.1",
     "prettier": "^2.8.6",
-    "ts-jest": "^29.0.5",
-    "tsc-alias": "^1.8.4",
-    "typescript": "^5.0.2"
+    "ts-jest": "^29.1.1",
+    "tsc-alias": "^1.8.7",
+    "typescript": "^5.1.6"
   }
 }
