--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -188,7 +188,7 @@
     ],
     "no-alert": "error",
     "no-console": [
-      "error",
+      "warn",
       {
         "allow": [
           "warn",
