--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
         "@udecode/plate-basic-marks": "^23.3.1",
         "@udecode/plate-break": "^23.3.1",
         "@udecode/plate-common": "^23.3.1",
+        "@udecode/plate-font": "^23.3.1",
         "@udecode/plate-heading": "^23.3.1",
         "@udecode/plate-indent": "^23.3.1",
         "@udecode/plate-list": "^23.3.1",
