--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,9 @@
         "webpack-dev-server": "4.15.1"
     },
     "dependencies": {
+        "@grafana/faro-react": "^1.3.7",
+        "@grafana/faro-web-sdk": "^1.3.7",
+        "@grafana/faro-web-tracing": "^1.3.7",
         "@navikt/aksel-icons": "5.15.1",
         "@navikt/ds-css": "5.15.1",
         "@navikt/ds-react": "5.15.1",
