Don't require auth for static files

--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -27,6 +27,13 @@ spec:
     sidecar:
       enabled: true
       autoLogin: true
+      autoLoginIgnorePaths: 
+        - /assets/*
+        - /*.js.map
+        - /*.js
+        - /*.html
+        - /*.txt
+        - /*.css
   prometheus:
     enabled: true
   accessPolicy:
