--- a/server/package.json
+++ b/server/package.json
@@ -18,29 +18,30 @@
     "@types/cors": "^2.8.17",
     "cors": "^2.8.5",
     "dotenv-flow": "^4.1.0",
-    "express": "^4.18.2",
-    "express-prom-bundle": "^6.6.0",
-    "http-proxy-middleware": "^2.0.6",
-    "jose": "^5.2.0",
-    "openid-client": "^5.6.2",
-    "prom-client": "^15.1.0"
+    "express": "^4.19.2",
+    "express-prom-bundle": "^7.0.0",
+    "http-proxy-middleware": "^3.0.0",
+    "jose": "^5.2.4",
+    "openid-client": "^5.6.5",
+    "prom-client": "^15.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.11",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
-    "eslint": "^8.56.0",
+    "@types/jest": "^29.5.12",
+    "@types/qs": "^6.9.14",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest": "^27.6.1",
+    "eslint-plugin-jest": "^28.2.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
-    "prettier": "^3.1.1",
-    "ts-jest": "^29.1.1",
+    "prettier": "^3.2.5",
+    "ts-jest": "^29.1.2",
     "tsc-alias": "^1.8.8",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.4"
   }
 }
