--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,14 +16,14 @@
     "license": "MIT",
     "devDependencies": {
         "@types/jest": "29.5.12",
-        "@types/react": "18.3.2",
+        "@types/react": "18.3.3",
         "@types/react-dom": "18.3.0",
         "@types/react-redux": "7.1.33",
         "@types/webpack-env": "1.18.5",
         "@typescript-eslint/eslint-plugin": "7.10.0",
         "@typescript-eslint/parser": "7.10.0",
         "copyfiles": "2.4.1",
-        "css-loader": "7.1.1",
+        "css-loader": "7.1.2",
         "eslint": "8.57.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-import-resolver-typescript": "3.6.1",
@@ -49,25 +49,29 @@
         "@grafana/faro-react": "^1.7.3",
         "@grafana/faro-web-sdk": "^1.7.3",
         "@grafana/faro-web-tracing": "^1.7.3",
+        "@hocuspocus/provider": "^2.13.0",
         "@navikt/aksel-icons": "6.8.0",
         "@navikt/ds-css": "6.8.0",
         "@navikt/ds-react": "6.8.0",
         "@navikt/fnrvalidator": "1.3.0",
         "@reduxjs/toolkit": "2.2.5",
+        "@slate-yjs/core": "^1.0.2",
+        "@slate-yjs/react": "^1.1.0",
         "@styled-icons/fluentui-system-regular": "10.47.0",
-        "@udecode/plate-alignment": "31.0.0",
-        "@udecode/plate-autoformat": "31.0.0",
-        "@udecode/plate-basic-marks": "31.0.0",
-        "@udecode/plate-break": "31.0.0",
-        "@udecode/plate-common": "31.3.2",
-        "@udecode/plate-font": "31.0.0",
-        "@udecode/plate-heading": "31.0.0",
-        "@udecode/plate-indent": "31.1.0",
-        "@udecode/plate-list": "31.1.3",
-        "@udecode/plate-paragraph": "31.0.0",
-        "@udecode/plate-resizable": "31.0.0",
-        "@udecode/plate-serializer-docx": "31.4.1",
-        "@udecode/plate-table": "31.4.1",
+        "@udecode/plate-alignment": "33.0.6",
+        "@udecode/plate-autoformat": "33.0.0",
+        "@udecode/plate-basic-marks": "33.0.3",
+        "@udecode/plate-break": "33.0.0",
+        "@udecode/plate-common": "33.0.4",
+        "@udecode/plate-font": "33.0.0",
+        "@udecode/plate-heading": "33.0.3",
+        "@udecode/plate-indent": "33.0.2",
+        "@udecode/plate-list": "33.0.3",
+        "@udecode/plate-paragraph": "33.0.0",
+        "@udecode/plate-resizable": "33.0.2",
+        "@udecode/plate-serializer-docx": "33.0.3",
+        "@udecode/plate-table": "33.0.2",
+        "@udecode/plate-yjs": "^33.0.0",
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "react-redux": "9.1.2",
@@ -75,9 +79,8 @@
         "react-router-dom": "6.23.1",
         "slate": "0.103.0",
         "slate-history": "0.100.0",
-        "slate-react": "0.102.0",
-        "styled-components": "6.1.11"
+        "slate-react": "0.104.0",
+        "styled-components": "6.1.11",
+        "yjs": "^13.6.15"
     }
 }
-
-
