--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "lint-fix": "eslint src --color --fix"
   },
   "dependencies": {
+    "@hocuspocus/server": "^2.13.0",
     "@types/cors": "^2.8.17",
     "cors": "^2.8.5",
     "dotenv-flow": "^4.1.0",
@@ -23,7 +24,8 @@
     "http-proxy-middleware": "^3.0.0",
     "jose": "^5.3.0",
     "openid-client": "^5.6.5",
-    "prom-client": "^15.1.2"
+    "prom-client": "^15.1.2",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
