--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@hocuspocus/server": "^2.13.0",
+    "@slate-yjs/core": "^1.0.2",
     "@types/cors": "^2.8.17",
     "cors": "^2.8.5",
     "dotenv-flow": "^4.1.0",
