--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/qs": "^6.9.15",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
     "eslint": "^8.57.0",
