--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,14 +8,12 @@
         "build": "npm run build:js && npm run build:static",
         "start": "webpack serve --mode development",
         "local": "npm start",
-        "test": "jest",
-        "testcov": "jest --coverage --no-cache",
+        "test": "vitest",
         "lint": "eslint src --color",
         "lint-fix": "eslint src --color --fix"
     },
     "license": "MIT",
     "devDependencies": {
-        "@types/jest": "29.5.12",
         "@types/react": "18.3.2",
         "@types/react-dom": "18.3.0",
         "@types/react-redux": "7.1.33",
@@ -28,19 +26,19 @@
         "eslint-config-prettier": "9.1.0",
         "eslint-import-resolver-typescript": "3.6.1",
         "eslint-plugin-import": "2.29.1",
-        "eslint-plugin-jest": "28.5.0",
         "eslint-plugin-jsx-a11y": "6.8.0",
         "eslint-plugin-prefer-arrow": "1.2.3",
         "eslint-plugin-prettier": "5.1.3",
         "eslint-plugin-react": "7.34.1",
         "eslint-plugin-react-hooks": "4.6.2",
+        "eslint-plugin-vitest": "^0.5.4",
         "fork-ts-checker-webpack-plugin": "9.0.2",
-        "jest": "29.7.0",
         "prettier": "3.2.5",
         "style-loader": "4.0.0",
-        "ts-jest": "29.1.3",
         "ts-loader": "9.5.1",
         "typescript": "5.4.5",
+        "vite-tsconfig-paths": "^4.3.2",
+        "vitest": "^1.6.0",
         "webpack": "5.91.0",
         "webpack-cli": "5.1.4",
         "webpack-dev-server": "5.0.4"
@@ -79,5 +77,3 @@
         "styled-components": "6.1.11"
     }
 }
-
-
