Change to ES modules in order to avoid deprecataed Vitest CJS build

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
     "name": "kabal",
     "version": "1.0.0",
     "description": "Kabal - Klage- og ankebehandling",
+    "type": "module",
     "scripts": {
         "build:js": "webpack --mode production",
         "build:static": "copyfiles -f ./public/index.html dist && copyfiles -u 1 ./assets/* dist/assets",
