--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
         "eslint-plugin-react-hooks": "4.6.2",
         "eslint-plugin-vitest": "^0.5.4",
         "fork-ts-checker-webpack-plugin": "9.0.2",
+        "jsdom": "^24.1.0",
         "prettier": "3.2.5",
         "style-loader": "4.0.0",
         "ts-loader": "9.5.1",
