--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "node -r dotenv-flow/config --es-module-specifier-resolution=node dist/server.js",
     "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json && cp -r src/templates dist/templates",
-    "test": "jest",
+    "test": "vitest",
     "lint": "eslint src --color",
     "lint-fix": "eslint src --color --fix"
   },
@@ -27,21 +27,20 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
     "@types/qs": "^6.9.15",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest": "^28.5.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^5.1.3",
-    "jest": "^29.7.0",
-    "prettier": "^3.2.5",
-    "ts-jest": "^29.1.2",
+    "eslint-plugin-vitest": "^0.5.4",
+    "prettier": "^3.3.0",
     "tsc-alias": "^1.8.10",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vitest": "^1.6.0",
+    "vite-tsconfig-paths": "^4.3.2"
   }
 }
