--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,70 +4,66 @@
     "description": "Kabal - Klage- og ankebehandling",
     "type": "module",
     "scripts": {
-        "build:js": "webpack --mode production",
-        "build:static": "copyfiles -f ./public/index.html dist && copyfiles -u 1 ./assets/* dist/assets",
-        "build": "npm run build:js && npm run build:static",
-        "start": "webpack serve --mode development",
-        "local": "npm start",
-        "test": "vitest",
-        "lint": "eslint src --color",
-        "lint-fix": "eslint src --color --fix"
+        "start": "vite",
+        "build": "vite build",
+        "build:bun": "bun build --entrypoints ./src/index.tsx --outdir ./dist --target browser",
+        "typecheck": "tsc",
+        "lint": "eslint src --color --cache --cache-strategy content --cache-location .eslintcache"
     },
     "license": "MIT",
     "devDependencies": {
-        "@types/react": "18.3.2",
+        "@happy-dom/global-registrator": "^14.12.0",
+        "@types/bun": "^1.1.3",
+        "@types/react": "18.3.3",
         "@types/react-dom": "18.3.0",
         "@types/react-redux": "7.1.33",
-        "@types/webpack-env": "1.18.5",
-        "@typescript-eslint/eslint-plugin": "7.10.0",
-        "@typescript-eslint/parser": "7.10.0",
-        "copyfiles": "2.4.1",
-        "css-loader": "7.1.1",
+        "@typescript-eslint/eslint-plugin": "7.12.0",
+        "@typescript-eslint/parser": "7.12.0",
+        "@vitejs/plugin-react": "^4.3.0",
+        "css-loader": "7.1.2",
         "eslint": "8.57.0",
         "eslint-config-prettier": "9.1.0",
-        "eslint-import-resolver-typescript": "3.6.1",
+        "eslint-import-resolver-typescript-bun": "^0.0.92",
         "eslint-plugin-import": "2.29.1",
         "eslint-plugin-jsx-a11y": "6.8.0",
         "eslint-plugin-prefer-arrow": "1.2.3",
         "eslint-plugin-prettier": "5.1.3",
-        "eslint-plugin-react": "7.34.1",
+        "eslint-plugin-react": "7.34.2",
         "eslint-plugin-react-hooks": "4.6.2",
         "eslint-plugin-vitest": "^0.5.4",
-        "fork-ts-checker-webpack-plugin": "9.0.2",
         "jsdom": "^24.1.0",
-        "prettier": "3.2.5",
+        "prettier": "3.3.1",
         "style-loader": "4.0.0",
         "ts-loader": "9.5.1",
         "typescript": "5.4.5",
-        "vite-tsconfig-paths": "^4.3.2",
-        "vitest": "^1.6.0",
-        "webpack": "5.91.0",
-        "webpack-cli": "5.1.4",
-        "webpack-dev-server": "5.0.4"
+        "vite": "^5.2.12",
+        "vite-tsconfig-paths": "^4.3.2"
     },
     "dependencies": {
         "@grafana/faro-react": "^1.7.3",
         "@grafana/faro-web-sdk": "^1.7.3",
         "@grafana/faro-web-tracing": "^1.7.3",
-        "@navikt/aksel-icons": "6.8.0",
-        "@navikt/ds-css": "6.8.0",
-        "@navikt/ds-react": "6.8.0",
+        "@navikt/aksel-icons": "6.10.1",
+        "@navikt/ds-css": "6.10.1",
+        "@navikt/ds-react": "6.10.1",
         "@navikt/fnrvalidator": "1.3.0",
         "@reduxjs/toolkit": "2.2.5",
         "@styled-icons/fluentui-system-regular": "10.47.0",
-        "@udecode/plate-alignment": "31.0.0",
-        "@udecode/plate-autoformat": "31.0.0",
-        "@udecode/plate-basic-marks": "31.0.0",
-        "@udecode/plate-break": "31.0.0",
-        "@udecode/plate-common": "31.3.2",
-        "@udecode/plate-font": "31.0.0",
-        "@udecode/plate-heading": "31.0.0",
-        "@udecode/plate-indent": "31.1.0",
-        "@udecode/plate-list": "31.1.3",
-        "@udecode/plate-paragraph": "31.0.0",
-        "@udecode/plate-resizable": "31.0.0",
-        "@udecode/plate-serializer-docx": "31.4.1",
-        "@udecode/plate-table": "31.4.1",
+        "@types/qs": "^6.9.15",
+        "@udecode/plate-alignment": "33.0.6",
+        "@udecode/plate-autoformat": "33.0.0",
+        "@udecode/plate-basic-marks": "33.0.3",
+        "@udecode/plate-break": "33.0.0",
+        "@udecode/plate-common": "33.0.4",
+        "@udecode/plate-font": "33.0.0",
+        "@udecode/plate-heading": "33.0.3",
+        "@udecode/plate-indent": "33.0.2",
+        "@udecode/plate-list": "33.0.3",
+        "@udecode/plate-paragraph": "33.0.0",
+        "@udecode/plate-resizable": "33.0.2",
+        "@udecode/plate-serializer-docx": "33.0.7",
+        "@udecode/plate-table": "33.0.7",
+        "qs": "^6.12.1",
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "react-redux": "9.1.2",
@@ -75,7 +71,7 @@
         "react-router-dom": "6.23.1",
         "slate": "0.103.0",
         "slate-history": "0.100.0",
-        "slate-react": "0.102.0",
+        "slate-react": "0.105.0",
         "styled-components": "6.1.11"
     }
 }
