--- a/server/package.json
+++ b/server/package.json
@@ -1,46 +1,37 @@
 {
-  "name": "server",
-  "description": "",
-  "version": "1.0.0",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "main": "dist/server.js",
-  "type": "module",
-  "scripts": {
-    "start": "node -r dotenv-flow/config --es-module-specifier-resolution=node dist/server.js",
-    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json && cp -r src/templates dist/templates",
-    "test": "vitest",
-    "lint": "eslint src --color",
-    "lint-fix": "eslint src --color --fix"
-  },
-  "dependencies": {
-    "@types/cors": "^2.8.17",
-    "cors": "^2.8.5",
-    "dotenv-flow": "^4.1.0",
-    "express": "^4.19.2",
-    "express-prom-bundle": "^7.0.0",
-    "http-proxy-middleware": "^3.0.0",
-    "jose": "^5.3.0",
-    "openid-client": "^5.6.5",
-    "prom-client": "^15.1.2"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/qs": "^6.9.15",
-    "@typescript-eslint/eslint-plugin": "^7.11.0",
-    "@typescript-eslint/parser": "^7.11.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vitest": "^0.5.4",
-    "prettier": "^3.3.0",
-    "tsc-alias": "^1.8.10",
-    "typescript": "^5.4.5",
-    "vitest": "^1.6.0",
-    "vite-tsconfig-paths": "^4.3.2"
-  }
+    "name": "server",
+    "description": "",
+    "version": "1.0.0",
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "main": "src/server.ts",
+    "type": "module",
+    "scripts": {
+        "start": "bun run src/server.ts",
+        "lint": "eslint ./src/**/*.ts --color --cache --cache-strategy content --cache-location .eslintcache",
+        "typecheck": "tsc"
+    },
+    "dependencies": {
+        "cors": "2.8.5",
+        "dotenv-flow": "4.1.0",
+        "express": "4.19.2",
+        "express-prom-bundle": "7.0.0",
+        "http-proxy-middleware": "3.0.0",
+        "jose": "5.4.0",
+        "openid-client": "5.6.5",
+        "prom-client": "15.1.2"
+    },
+    "devDependencies": {
+        "@eslint/js": "9.4.0",
+        "@types/bun": "1.1.3",
+        "@types/cors": "2.8.17",
+        "@types/express": "4.17.21",
+        "eslint": "9.4.0",
+        "eslint-config-prettier": "9.1.0",
+        "eslint-plugin-prettier": "5.1.3",
+        "globals": "15.3.0",
+        "typescript": "5.4.5",
+        "typescript-eslint": "7.12.0"
+    }
 }
