--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,22 +1,34 @@
 {
   "compilerOptions": {
-    "target": "es2017",
+    // enable latest features
     "lib": [
-      "esnext"
+      "ESNext"
     ],
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleDetection": "force",
+    "jsx": "react-jsx", // support JSX
+    // Bundler mode
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
+    // Best practices
+    "strict": true,
+    "skipLibCheck": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    // Some stricter flags
+    "useUnknownInCatchVariables": true,
+    "noPropertyAccessFromIndexSignature": true,
     "sourceMap": true,
     "allowJs": false,
-    "skipLibCheck": true,
     "esModuleInterop": true,
     "noUncheckedIndexedAccess": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "es2020",
-    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": false,
     "rootDir": "./src",
     "outDir": "./dist",
     "baseUrl": "./src",
