--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -27,7 +27,10 @@
       "@app/*": [
         "*"
       ]
-    }
+    },
+
+    "incremental": true,
+    "tsBuildInfoFile": ".tsbuildinfo",
   },
   "include": ["src"],
 }
