GitHub workflows: Add quotes to timezone

--- a/.github/workflows/deploy-to-dev.yaml
+++ b/.github/workflows/deploy-to-dev.yaml
@@ -75,7 +75,7 @@ jobs:
 
       - name: Generate version number
         id: version
-        run: echo "version=$(TZ=Europe/Oslo git show -s --format=%cd --date='format-local:%Y-%m-%dT%H:%M:%S')" >> "$GITHUB_OUTPUT"
+        run: echo "version=$(TZ="Europe/Oslo" git show -s --format=%cd --date='format-local:%Y-%m-%dT%H:%M:%S')" >> "$GITHUB_OUTPUT"
 
       - name: Build & push Docker image
         uses: nais/docker-build-push@v0
