--- a/.github/workflows/deploy-to-prod.yaml
+++ b/.github/workflows/deploy-to-prod.yaml
@@ -48,7 +48,7 @@ jobs:
         id: release
         run: |
           COMMIT=$(git rev-parse --short=7 HEAD)
-          VERSION=$(TZ=Europe/Oslo git show -s --format=%cd --date='format-local:%Y-%m-%dT%H:%M:%S')
+          VERSION=$(TZ="Europe/Oslo" git show -s --format=%cd --date='format-local:%Y-%m-%dT%H:%M:%S')
           RELEASE=$VERSION-$COMMIT
           echo "release=${RELEASE}" >> $GITHUB_OUTPUT
 
