--- a/.github/workflows/deploy-to-dev.yaml
+++ b/.github/workflows/deploy-to-dev.yaml
@@ -83,6 +83,12 @@ jobs:
           cd server
           bun test
 
+      - name: Build server
+        shell: bash
+        run: |
+          cd server
+          bun run build
+
       - name: Generate version number
         id: version
         run: echo "version=$(TZ="Europe/Oslo" git show -s --format=%cd --date='format-local:%Y-%m-%dT%H:%M:%S')" >> "$GITHUB_OUTPUT"
