--- a/server/package.json
+++ b/server/package.json
@@ -1,37 +1,39 @@
 {
-    "name": "server",
-    "description": "",
-    "version": "1.0.0",
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "main": "src/server.ts",
-    "type": "module",
-    "scripts": {
-        "start": "bun run src/server.ts",
-        "lint": "eslint ./src/**/*.ts --color --cache --cache-strategy content --cache-location .eslintcache",
-        "typecheck": "tsc"
-    },
-    "dependencies": {
-        "cors": "2.8.5",
-        "dotenv-flow": "4.1.0",
-        "express": "4.19.2",
-        "express-prom-bundle": "7.0.0",
-        "http-proxy-middleware": "3.0.0",
-        "jose": "5.4.0",
-        "openid-client": "5.6.5",
-        "prom-client": "15.1.2"
-    },
-    "devDependencies": {
-        "@eslint/js": "9.4.0",
-        "@types/bun": "1.1.3",
-        "@types/cors": "2.8.17",
-        "@types/express": "4.17.21",
-        "eslint": "9.4.0",
-        "eslint-config-prettier": "9.1.0",
-        "eslint-plugin-prettier": "5.1.3",
-        "globals": "15.4.0",
-        "typescript": "5.4.5",
-        "typescript-eslint": "7.12.0"
-    }
+  "name": "server",
+  "description": "",
+  "version": "1.0.0",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "main": "dist/server.js",
+  "type": "module",
+  "scripts": {
+    "start": "node --watch --trace-warnings -r dotenv-flow/config --es-module-specifier-resolution=node dist/server.js",
+    "build": "bun build ./src/server.ts --target node --format esm --sourcemap --outdir dist",
+    "watch": "npm run build -- --watch",
+    "lint": "eslint ./src/**/*.ts --color --cache --cache-strategy content --cache-location .eslintcache",
+    "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@fastify/cors": "9.0.1",
+    "@fastify/http-proxy": "9.5.0",
+    "@fastify/type-provider-typebox": "4.0.0",
+    "@types/node": "20.14.9",
+    "dotenv-flow": "4.1.0",
+    "fastify": "4.28.1",
+    "fastify-metrics": "11.0.0",
+    "jose": "5.6.3",
+    "openid-client": "5.6.5",
+    "prom-client": "15.1.3"
+  },
+  "devDependencies": {
+    "@eslint/js": "9.6.0",
+    "@types/bun": "^1.1.6",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "globals": "15.8.0",
+    "typescript": "5.5.3",
+    "typescript-eslint": "7.15.0"
+  }
 }
