Add outbound access policy for Slack hooks

--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -54,6 +54,7 @@ spec:
         - application: kabal-text-templates
       external:
         - host: login.microsoftonline.com
+        - host: hooks.slack.com
   ingresses:
   {{#each ingresses as |url|}}
     - {{url}}
