--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,13 @@
         "@types/react": "18.3.3",
         "@types/react-dom": "18.3.0",
         "@types/react-redux": "7.1.33",
-        "@typescript-eslint/eslint-plugin": "8.0.1",
-        "@typescript-eslint/parser": "8.0.1",
+        "@typescript-eslint/eslint-plugin": "8.1.0",
+        "@typescript-eslint/parser": "8.1.0",
         "@vitejs/plugin-react": "^4.3.1",
         "css-loader": "7.1.2",
         "eslint": "8.57.0",
         "eslint-config-prettier": "9.1.0",
-        "eslint-import-resolver-typescript-bun": "^0.0.101",
+        "eslint-import-resolver-typescript-bun": "^0.0.102",
         "eslint-plugin-import": "2.29.1",
         "eslint-plugin-jsx-a11y": "6.9.0",
         "eslint-plugin-prefer-arrow": "1.2.3",
@@ -36,18 +36,21 @@
         "ts-loader": "9.5.1",
         "typescript": "5.5.4",
         "vite": "^5.4.0",
-        "vite-tsconfig-paths": "^5.0.0"
+        "vite-tsconfig-paths": "^5.0.1"
     },
     "dependencies": {
         "@grafana/faro-react": "^1.9.0",
         "@grafana/faro-web-sdk": "^1.9.0",
         "@grafana/faro-web-tracing": "^1.9.0",
-        "@navikt/aksel-icons": "6.14.0",
-        "@navikt/ds-css": "6.14.0",
-        "@navikt/ds-react": "6.14.0",
+        "@hocuspocus/provider": "^2.13.5",
+        "@navikt/aksel-icons": "6.16.0",
+        "@navikt/ds-css": "6.16.0",
+        "@navikt/ds-react": "6.16.0",
         "@navikt/fnrvalidator": "1.3.0",
         "@reduxjs/toolkit": "2.2.7",
-        "@styled-icons/fluentui-system-regular": "10.47.0", 
+        "@slate-yjs/core": "^1.0.2",
+        "@slate-yjs/react": "^1.1.0",
+        "@styled-icons/fluentui-system-regular": "10.47.0",
         "@types/qs": "^6.9.15",
         "@udecode/plate-alignment": "36.0.11",
         "@udecode/plate-autoformat": "36.0.0",
@@ -62,6 +65,7 @@
         "@udecode/plate-resizable": "36.0.0",
         "@udecode/plate-serializer-docx": "36.3.5",
         "@udecode/plate-table": "34.0.0",
+        "@udecode/plate-yjs": "^36.0.2",
         "qs": "^6.13.0",
         "react": "18.3.1",
         "react-dom": "18.3.1",
@@ -70,7 +74,8 @@
         "react-router-dom": "6.26.0",
         "slate": "0.103.0",
         "slate-history": "0.100.0",
-        "slate-react": "0.107.1",
-        "styled-components": "6.1.12"
+        "slate-react": "0.105.0",
+        "styled-components": "6.1.12",
+        "yjs": "^13.6.18"
     }
 }
