--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,66 +11,72 @@
     },
     "license": "MIT",
     "devDependencies": {
-        "@happy-dom/global-registrator": "^14.12.3",
-        "@types/bun": "^1.1.6",
-        "@types/react": "18.3.3",
+        "@happy-dom/global-registrator": "14.12.3",
+        "@types/bun": "1.1.9",
+        "@types/react": "18.3.5",
         "@types/react-dom": "18.3.0",
         "@types/react-redux": "7.1.33",
-        "@typescript-eslint/eslint-plugin": "8.0.1",
-        "@typescript-eslint/parser": "8.0.1",
-        "@vitejs/plugin-react": "^4.3.1",
+        "@typescript-eslint/eslint-plugin": "8.5.0",
+        "@typescript-eslint/parser": "8.5.0",
+        "@vitejs/plugin-react": "4.3.1",
         "css-loader": "7.1.2",
         "eslint": "8.57.0",
         "eslint-config-prettier": "9.1.0",
-        "eslint-import-resolver-typescript-bun": "^0.0.101",
-        "eslint-plugin-import": "2.29.1",
-        "eslint-plugin-jsx-a11y": "6.9.0",
+        "eslint-import-resolver-typescript-bun": "0.0.104",
+        "eslint-plugin-import": "2.30.0",
+        "eslint-plugin-jsx-a11y": "6.10.0",
         "eslint-plugin-prefer-arrow": "1.2.3",
         "eslint-plugin-prettier": "5.2.1",
-        "eslint-plugin-react": "7.35.0",
+        "eslint-plugin-react": "7.35.2",
         "eslint-plugin-react-hooks": "4.6.2",
-        "eslint-plugin-vitest": "^0.5.4",
-        "jsdom": "^24.1.1",
+        "eslint-plugin-vitest": "0.5.4",
+        "jsdom": "24.1.1",
         "prettier": "3.3.3",
         "style-loader": "4.0.0",
         "ts-loader": "9.5.1",
-        "typescript": "5.5.4",
-        "vite": "^5.4.0",
-        "vite-tsconfig-paths": "^5.0.0"
+        "typescript": "5.6.2",
+        "vite": "5.4.3",
+        "vite-tsconfig-paths": "5.0.1"
     },
     "dependencies": {
-        "@grafana/faro-react": "^1.9.0",
-        "@grafana/faro-web-sdk": "^1.9.0",
-        "@grafana/faro-web-tracing": "^1.9.0",
-        "@navikt/aksel-icons": "6.14.0",
-        "@navikt/ds-css": "6.14.0",
-        "@navikt/ds-react": "6.14.0",
+        "@grafana/faro-react": "1.9.1",
+        "@grafana/faro-web-sdk": "1.9.1",
+        "@grafana/faro-web-tracing": "1.9.1",
+        "@hocuspocus/provider": "2.13.5",
+        "@navikt/aksel-icons": "6.16.3",
+        "@navikt/ds-css": "6.16.3",
+        "@navikt/ds-react": "6.16.3",
         "@navikt/fnrvalidator": "1.3.0",
         "@reduxjs/toolkit": "2.2.7",
-        "@styled-icons/fluentui-system-regular": "10.47.0", 
-        "@types/qs": "^6.9.15",
+        "@slate-yjs/core": "1.0.2",
+        "@slate-yjs/react": "1.1.0",
+        "@styled-icons/fluentui-system-regular": "10.47.0",
+        "@types/qs": "6.9.15",
         "@udecode/plate-alignment": "36.0.11",
-        "@udecode/plate-autoformat": "36.0.0",
+        "@udecode/plate-autoformat": "36.4.0",
         "@udecode/plate-basic-marks": "36.0.0",
-        "@udecode/plate-break": "36.0.0",
-        "@udecode/plate-common": "36.3.4",
+        "@udecode/plate-break": "36.3.8",
+        "@udecode/plate-common": "36.3.9",
+        "@udecode/plate-cursor": "36.0.0",
         "@udecode/plate-font": "36.0.0",
         "@udecode/plate-heading": "36.0.12",
         "@udecode/plate-indent": "36.0.0",
-        "@udecode/plate-list": "36.0.0",
+        "@udecode/plate-list": "36.5.2",
         "@udecode/plate-paragraph": "36.0.0",
         "@udecode/plate-resizable": "36.0.0",
-        "@udecode/plate-serializer-docx": "36.3.5",
-        "@udecode/plate-table": "34.0.0",
-        "qs": "^6.13.0",
+        "@udecode/plate-serializer-docx": "36.5.3",
+        "@udecode/plate-table": "36.3.8",
+        "@udecode/plate-yjs": "36.0.2",
+        "qs": "6.13.0",
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "react-redux": "9.1.2",
-        "react-router": "6.26.0",
-        "react-router-dom": "6.26.0",
+        "react-router": "6.26.2",
+        "react-router-dom": "6.26.2",
         "slate": "0.103.0",
         "slate-history": "0.100.0",
-        "slate-react": "0.107.1",
-        "styled-components": "6.1.12"
+        "slate-react": "0.108.0",
+        "styled-components": "6.1.13",
+        "yjs": "13.6.18"
     }
 }
