--- a/server/package.json
+++ b/server/package.json
@@ -9,30 +9,34 @@
   "type": "module",
   "scripts": {
     "start": "bun run build --watch & node --watch --trace-warnings dist/server.js",
-    "build": "bun build ./src/server.ts --target node --format esm --sourcemap --outdir dist",
+    "build": "bun build ./src/server.ts --target node --format esm --sourcemap=external --outdir dist",
     "lint": "eslint ./src/**/*.ts --color --cache --cache-strategy content --cache-location .eslintcache",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@fastify/cors": "9.0.1",
     "@fastify/http-proxy": "9.5.0",
-    "@fastify/type-provider-typebox": "4.0.0",
-    "@types/node": "20.14.12",
+    "@fastify/type-provider-typebox": "4.1.0",
+    "@hocuspocus/extension-redis": "2.13.5",
+    "@hocuspocus/server": "2.13.5",
+    "@slate-yjs/core": "1.0.2",
+    "@types/node": "22.5.4",
     "fastify": "4.28.1",
     "fastify-metrics": "11.0.0",
-    "jose": "5.6.3",
-    "openid-client": "5.6.5",
+    "jose": "5.8.0",
+    "openid-client": "5.7.0",
     "prom-client": "15.1.3",
-    "redis": "^4.6.15"
+    "redis": "4.7.0"
   },
   "devDependencies": {
-    "@eslint/js": "9.7.0",
-    "@types/bun": "1.1.6",
+    "@eslint/js": "9.10.0",
+    "@types/bun": "1.1.9",
+    "@types/uuid": "10.0.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
-    "globals": "15.8.0",
-    "typescript": "5.5.4",
-    "typescript-eslint": "7.17.0"
+    "globals": "15.9.0",
+    "typescript": "5.6.2",
+    "typescript-eslint": "8.5.0"
   }
 }
