--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -24,13 +24,11 @@
     /* Paths */
     "baseUrl": "./src",
     "paths": {
-      "@app/*": [
-        "*"
-      ]
+      "@app/*": ["*"]
     },
 
     "incremental": true,
-    "tsBuildInfoFile": ".tsbuildinfo",
+    "tsBuildInfoFile": ".tsbuildinfo"
   },
-  "include": ["src"],
+  "include": ["src"]
 }
