--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "bun run build --watch & node --watch --trace-warnings dist/server.js",
     "build": "bun build ./src/server.ts --target node --format esm --sourcemap=external --outdir dist",
-    "lint": "eslint ./src/**/*.ts --color --cache --cache-strategy content --cache-location .eslintcache",
+    "lint": "biome check",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -29,14 +29,9 @@
     "redis": "4.7.0"
   },
   "devDependencies": {
-    "@eslint/js": "9.11.0",
-    "@types/bun": "1.1.10",
+    "@biomejs/biome": "1.9.3",
+    "@types/bun": "1.1.11",
     "@types/uuid": "10.0.0",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-prettier": "5.2.1",
-    "globals": "15.9.0",
-    "typescript": "5.6.2",
-    "typescript-eslint": "8.6.0"
+    "typescript": "5.6.3"
   }
 }
