Fix main build and deploy secret passing

--- a/.github/workflows/deploy-to-prod.yaml
+++ b/.github/workflows/deploy-to-prod.yaml
@@ -6,6 +6,9 @@ on:
       NAIS_WORKLOAD_IDENTITY_PROVIDER:
         description: "Identity provider for nais/docker-build-push"
         required: true
+      READER_TOKEN:
+        description: "Token for reading from GitHub Package Registry"
+        required: true
   workflow_dispatch:
 
 run-name: Prod deploy of ${{ github.ref_name }}
