--- a/.github/workflows/deploy-to-dev.yaml
+++ b/.github/workflows/deploy-to-dev.yaml
@@ -17,6 +17,9 @@ on:
       NAIS_WORKLOAD_IDENTITY_PROVIDER:
         description: "Identity provider for nais/docker-build-push"
         required: true
+      READER_TOKEN:
+        description: "Token for reading from GitHub Package Registry"
+        required: true
   workflow_dispatch:
     inputs:
       run_e2e:
