--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,6 +14,7 @@ jobs:
     uses: ./.github/workflows/deploy-to-dev.yaml
     secrets:
       NAIS_WORKLOAD_IDENTITY_PROVIDER: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
+      READER_TOKEN: ${{ secrets.READER_TOKEN }}
   
   deploy_to_prod:
     name: Prod
@@ -24,3 +25,4 @@ jobs:
     uses: ./.github/workflows/deploy-to-prod.yaml
     secrets:
       NAIS_WORKLOAD_IDENTITY_PROVIDER: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
+      READER_TOKEN: ${{ secrets.READER_TOKEN }}
