Disable biome rule that arguably made code harder to read

--- a/biome.json
+++ b/biome.json
@@ -29,6 +29,9 @@
         "noConsole": { "level": "off", "options": { "allow": ["debug", "info", "warn", "error"] } },
         "noReactSpecificProps": { "level": "off" },
         "noEmptyBlockStatements": { "level": "off" }
+      },
+      "complexity": {
+        "useSimplifiedLogicExpression": { "level": "off" }
       }
     }
   },
