--- a/.github/workflows/deploy-to-dev.yaml
+++ b/.github/workflows/deploy-to-dev.yaml
@@ -52,8 +52,8 @@ jobs:
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: latest
-      
+          bun-version: 1.1.34
+
       - name: Install frontend dependencies
         shell: bash
         env:
@@ -70,13 +70,13 @@ jobs:
         run: |
           cd frontend
           bun run build
-      
+
       - name: Test frontend
         shell: bash
         run: |
           cd frontend
           bun test
-      
+
       - name: Install server dependencies
         shell: bash
         env:
@@ -85,7 +85,7 @@ jobs:
           cd server
           echo -e "\n[install.scopes]\n\"@navikt\" = { token = \"$BUN_AUTH_TOKEN\", url = \"https://npm.pkg.github.com/\" }" >> bunfig.toml
           bun install --frozen-lockfile
-      
+
       - name: Test server
         shell: bash
         run: |
@@ -118,7 +118,7 @@ jobs:
           project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }} # required, but is defined as an organization variable
           build_args: |
             VERSION=${{ steps.version.outputs.version }}
-  
+
   deploy_to_dev:
     name: Deploy
     runs-on: ubuntu-latest
