--- a/.github/workflows/update-cache.yaml
+++ b/.github/workflows/update-cache.yaml
@@ -16,12 +16,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
+
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: latest
-          
+          bun-version: 1.1.34
+
       - name: Install ${{ matrix.apps }} dependencies
         shell: bash
         env:
@@ -30,7 +30,7 @@ jobs:
           cd ${{ matrix.apps }}
           echo -e "\n[install.scopes]\n\"@navikt\" = { token = \"$BUN_AUTH_TOKEN\", url = \"https://npm.pkg.github.com/\" }" >> bunfig.toml
           bun install --frozen-lockfile
-          
+
       - name: Restore cache for ${{ matrix.apps }}
         uses: actions/cache/restore@v4
         with:
