Migrate from Redis to Valkey

--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -43,7 +43,6 @@ spec:
         - application: kabal-e2e-tests
     outbound:
       rules:
-        - application: klage-redis-fe
         - application: kabal-api
         - application: kabal-smart-editor-api
         - application: kabal-json-to-pdf
@@ -62,7 +61,7 @@ spec:
   envFrom:
     - secret: kabal-session-key
     - secret: slack-url
-  redis:
+  valkey:
     - instance: obo-cache
       access: readwrite
     - instance: hocuspocus
